--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,37 +8,59 @@
         tools:context=".Activity.LoginActivity">
 
     <ImageView
-            android:layout_width="250dp"
-            android:layout_height="250dp" app:srcCompat="@drawable/octocat"
-            android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="108dp"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:layout_width="100dp"
+            android:layout_height="0dp" app:srcCompat="@drawable/octocat"
+            android:id="@+id/imageView"
+            android:layout_marginTop="52dp"
+            android:layout_marginBottom="35dp" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/tv_display" app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
     <TextView
             android:text="Welcome To Yet Another Github Client"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_display"
             android:textAppearance="@android:style/TextAppearance.Medium"
-            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintEnd_toEndOf="@+id/imageView"
-            android:layout_marginTop="390dp"
-            android:textStyle="bold" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="116dp"
-            app:layout_constraintBottom_toTopOf="@+id/btn_login"/>
+            android:textStyle="bold"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginBottom="76dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/et_username"
+            app:layout_constraintStart_toStartOf="parent"/>
     <Button
-            android:text="Authorize"
+            android:text="OAuth"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/btn_authorize" app:layout_constraintEnd_toEndOf="@+id/tv_display"
-            app:layout_constraintStart_toStartOf="@+id/tv_display" android:layout_marginTop="50dp"
-            app:layout_constraintTop_toTopOf="@+id/tv_display"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
+            android:id="@+id/btn_authorize"
+         android:visibility="gone"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            app:layout_constraintTop_toBottomOf="@+id/btn_login" android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
-            android:text="Usename and password"
-            android:layout_width="match_parent"
+            android:text="Basic Login"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/btn_login"
-            app:layout_constraintTop_toBottomOf="@+id/tv_display" android:layout_marginBottom="150dp"
-            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" android:textStyle="bold"
-            style="@style/Widget.AppCompat.Button.Colored"/>
+            android:textStyle="bold|italic"
+            style="@style/Widget.AppCompat.Button.Colored"
+            app:layout_constraintTop_toBottomOf="@+id/et_password" android:layout_marginBottom="19dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_authorize"
+            app:layout_constraintStart_toStartOf="parent"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:text=" "
+            android:ems="10"
+            android:id="@+id/et_username"
+            app:layout_constraintStart_toStartOf="@+id/et_password"
+            android:layout_marginStart="1dp" app:layout_constraintTop_toBottomOf="@+id/tv_display"
+            android:layout_marginBottom="35dp" app:layout_constraintBottom_toTopOf="@+id/et_password"/>
+    <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:id="@+id/et_password"
+            app:layout_constraintTop_toBottomOf="@+id/et_username" android:layout_marginBottom="188dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/btn_login"
+            app:layout_constraintStart_toStartOf="parent" android:hint="Password" android:inputType="textPassword"/>
 </android.support.constraint.ConstraintLayout>
