--- a/app/src/main/res/layout/single_item_event.xml
+++ b/app/src/main/res/layout/single_item_event.xml
@@ -6,11 +6,14 @@
 
         android:layout_margin="8dp" android:layout_height="wrap_content">
 
-    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
+    <RelativeLayout
+            android:layout_margin="4dp"
+            android:layout_width="match_parent" android:layout_height="wrap_content">
 
 
-        <ImageView android:layout_width="50dp" android:layout_height="50dp"
+        <ImageView android:layout_width="75dp" android:layout_height="75dp"
 
+                   android:layout_margin="4dp"
                    tools:src="@drawable/ic_launcher_background"
                    android:id="@+id/iv_profile"/>
 
@@ -19,13 +22,19 @@
                   android:id="@+id/tv_username"
                   android:layout_margin="2dp"
 
+                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                  android:padding="10dp"
                   tools:text="Arunm619"
+                  android:textColor="@color/colorPrimary"
                   android:layout_toEndOf="@id/iv_profile"
         />
 
-        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
 
-                  android:layout_margin="4dp"
+        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+                  android:padding="10dp"
+
+                  android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+                  android:textColor="@color/BLACK"
                   android:id="@+id/tv_content"
                   tools:text="Repo Name : and other details "
                   android:layout_below="@id/iv_profile"
